%%{
    init: {
        'theme': 'forest',
        'layout': 'elk',
        'themeVariables': {'fontSize': '32px'},
        'themeCSS': '.edgeLabel, .edgeLabel p { font-size: 32px !important; } .relationshipLine { stroke-width: 1.5px !important; }'
    }
}%%
erDiagram
    direction BT
    PENGELUARAN_REQUESTS {
        bigint id PK
        text uraian
        decimal jumlah
        date tanggal_kebutuhan
        string kategori_pengeluaran
        string lampiran
        enum status
        bigint requester_id FK
        bigint branch_id FK
    }
    APPROVAL_LOGS {
        bigint id PK
        bigint pengeluaran_request_id FK
        string previous_status
        string new_status
        bigint user_id FK
        text note
    }
    BRANCH_APPROVAL_SETTINGS {
        bigint id PK
        bigint branch_id FK
        boolean auto_approval_enabled
        decimal auto_approval_threshold
    }
    NOTIFICATIONS {
        bigint id PK
        bigint user_id FK
        string type
        string title
        text message
        json data
        boolean is_read
    }
    NOTIFICATION_SETTINGS {
        bigint id PK
        bigint branch_id FK
        boolean tagihan_baru_enabled
        boolean reminder_enabled
        boolean kwitansi_enabled
        boolean overdue_enabled
        json reminder_days_before
        int overdue_interval_days
    }
    NOTIFICATION_LOGS {
        bigint id PK
        bigint branch_id FK
        string recipient_email
        enum notification_type
        string tagihan_kode
        bigint pengeluaran_request_id FK
        string workflow_event
        enum status
        string reason
        text error_message
        timestamp sent_at
    }
    EMAIL_OPT_OUTS {
        bigint id PK
        string email
        enum notification_type
        string token UK
    }
    NOTIFICATION_SENT_RECORDS {
        bigint id PK
        string tagihan_kode
        enum notification_type
        date sent_date
    }
    USERS {
        bigint id PK
        string username UK
        string password
        string name
        string email UK
        timestamp email_verified_at
        bigint branch_id FK
        bigint siswa_id FK
        boolean is_active
        boolean must_change_password
    }
    BRANCHES {
        bigint id PK
        string location
    }

    USERS ||--o{ PENGELUARAN_REQUESTS : ""
    BRANCHES ||--o{ PENGELUARAN_REQUESTS : ""
    PENGELUARAN_REQUESTS ||--o{ APPROVAL_LOGS : ""
    USERS ||--o{ APPROVAL_LOGS : ""
    BRANCHES ||--o| BRANCH_APPROVAL_SETTINGS : ""
    USERS ||--o{ NOTIFICATIONS : ""
    BRANCHES ||--o| NOTIFICATION_SETTINGS : ""
    BRANCHES ||--o{ NOTIFICATION_LOGS : ""
    PENGELUARAN_REQUESTS ||--o{ NOTIFICATION_LOGS : ""
